<resources>
    <string name="app_name">Tourism Management Application</string>
    <string name="text_accounts">All Accounts</string>
    <string name="hint_name">Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="text_login">Login</string>
    <string name="text_register">Register</string>
    <string name="error_message_name">Enter Full Name</string>
    <string name="error_message_email">Enter Valid Email</string>
    <string name="error_message_age">Enter Age</string>
    <string name="error_message_password">Enter Password</string>
    <string name="success_message">Registration Successful</string>
    <string name="text_not_member">No account yet? Create one</string>
    <string name="text_already_member">Already a member? Login</string>
    <string name="error_email_exists">Email Already Exists</string>
    <string name="error_password_match">Password Does Not Matches</string>
    <string name="error_valid_email_password">Wrong Email or Password</string>
    <string name="action_settings">Settings</string>
    <string name="text_title">Tourism Management Application</string>
    <string name="placeName">Place Name</string>
    <string name="placeDesc">Enter Description</string>
    <string name="placeAdd">Enter Tour Place Address</string>
    <string name="placePrice">Enter Price</string>
    <string name="placeImage">Enter Image Name</string>
    <string name="placeVideo">Enter Video Name</string>
    <string name="placeBtn">Add Tour Place</string>
    <string name="AddTourPlace">Open Add Tour Place Form</string>
    <string name="viewTouristPlaces">View Places</string>
    <string name="viewActivity">View Place</string>
    <string name="deletePlace">Delete Place</string>
    <string name="title_activity_register_transport">RegisterTransportActivity</string>
    <string name="save_latitude_and_longitude">Save Latitude and Longitude</string>
    <string name="register_tourist_place">Register Tourist Place</string>
    <string name="select_video">Select Video</string>
    <string name="location_latitude">Location Latitude</string>
    <string name="location_longitude">Location Longitude</string>
    <string name="manage_booking">Manage Booking</string>
    <string name="admin_dashboard">Admin Dashboard</string>
    <string name="manage_users">Manage Users</string>
    <string name="manage_buses">Manage Buses</string>
    <string name="manage_tour">Manage Tour</string>
    <string name="manage_ticket">Manage Ticket</string>
    <string name="manage_package">Manage Package</string>
    <string name="manage_hotel">Manage Hotel</string>
    <string name="place_address">Place Address</string>
    <string name="place_description">Place Description</string>
    <string name="place_price">Place Price</string>
    <string name="booking_id">Booking ID</string>
    <string name="product_id">Product ID</string>
    <string name="customer_id">Customer ID</string>
    <string name="quantity">Quantity</string>
    <string name="type">Type</string>
    <string name="total_pay">Total</string>
    <string name="pay_status">Pay Status</string>
    <string name="createdAt">Created At</string>
    <string name="registration_no">Registration No</string>
    <string name="register_transport">Register Transport</string>
    <string name="vehicle_registration">Vehicle Registration</string>
    <string name="transport_name">Transport Name</string>
    <string name="register_a_ticket">Register A Ticket</string>
    <string name="view_ticket">View Ticket</string>
    <string name="hotel_image">Hotel Image</string>
    <string name="price_per_night">Price per Night</string>
    <string name="hotel_name">Hotel Name</string>
    <string name="hotel_address">Hotel Address</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="select_image">Select Image</string>
    <string name="tourist_place_name">Tourist Place Name</string>
    <string name="Open">Open</string>
    <string name="Close">Close</string>
</resources>
