<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:paddingBottom="20dp"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:paddingTop="20dp"
    android:id="@+id/mainActivityLayout"
    tools:context=".MainActivity">
    <ImageView
            android:id="@+id/simpleImageView"
            android:layout_width="wrap_content"
            android:layout_height="172dp"
            android:src="@drawable/logo"
            android:contentDescription="@string/text_title"/>
    <EditText
            android:id="@+id/userEmail"
            android:layout_width="346dp"
            android:layout_height="wrap_content"
            android:hint="@string/hint_email"
            android:textColor="@android:color/white"/>
    <EditText
    android:id="@+id/userPassword"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:hint="@string/hint_password"
    android:inputType="textPassword"
    android:maxLines="1"
    android:textColor="@android:color/white" />

    <Button
    android:id="@+id/buttonLogin"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="40dp"
    android:background="@color/colorTextHint"
    android:text="@string/text_login" />
    <TextView
    android:id="@+id/registerLink"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="30dp"
    android:gravity="center"
    android:text="@string/text_not_member"
    android:textSize="16dp" />

    <Button
            android:id="@+id/addTourPlaceBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:background="@color/colorTextHint"
            android:text="@string/AddTourPlace" />

</LinearLayout>