<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".RegisterActivity" android:orientation="vertical" android:background="@color/colorBackground">
    <TextView
            android:layout_width="match_parent"
            android:layout_height="51dp"
            android:text="@string/text_title"
            android:textSize="25dp"
            android:gravity="center_vertical|center_horizontal"/>
    <ImageView
            android:id="@+id/simpleImageView"
            android:layout_width="wrap_content"
            android:layout_height="172dp"
            android:src="@drawable/logo"
            android:contentDescription="@string/text_title"/>
    <EditText
            android:id="@+id/userName"
            android:layout_width="398dp"
            android:layout_height="wrap_content"
            android:hint="@string/hint_name"
            android:textColor="@android:color/white"/>

    <EditText
            android:id="@+id/inputEmail"
            android:layout_width="398dp"
            android:layout_height="wrap_content"
            android:hint="@string/hint_email"
            android:textColor="@android:color/white"/>
    <EditText
            android:id="@+id/inputPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:textColor="@android:color/white"/>
    <EditText
            android:id="@+id/InputConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_confirm_password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:textColor="@android:color/white" />
    <Button
            android:id="@+id/ButtonRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:background="@color/colorTextHint"
            android:text="@string/text_register" />


</LinearLayout>