<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:map="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.zahoor.activities.TouristPlace"
        android:id="@+id/tourTemplate">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:background="@color/colorBackground"
        android:orientation="vertical">

        <TextView
            android:id="@+id/registerTv"
            android:layout_width="match_parent"
            android:layout_height="29dp"
            android:background="@color/colorPrimary"
            android:gravity="center_vertical|center_horizontal|center"
            android:text="@string/register_tourist_place" />

        <EditText
            android:id="@+id/placeName"
            style="@style/Widget.AppCompat.Light.AutoCompleteTextView"
            android:layout_width="354dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:gravity="top|center_horizontal"
            android:hint="@string/placeName"
            android:inputType="text"
            android:textColor="@android:color/darker_gray" />

        <EditText
            android:id="@+id/placeDesc"
            style="@style/Widget.AppCompat.Light.AutoCompleteTextView"
            android:layout_width="356dp"
            android:layout_height="100dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="94dp"
            android:gravity="center_vertical|center_horizontal"
            android:hint="@string/placeDesc"
            android:inputType="text"
            android:textColor="@android:color/darker_gray" />

        <EditText
            android:id="@+id/placeAdd"
            android:layout_width="354dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:hint="@string/placeAdd"
            android:inputType="text"
            android:textColor="@android:color/darker_gray" />

        <EditText
            android:id="@+id/placePrice"
            android:layout_width="356dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:hint="@string/placePrice"
            android:inputType="text"
            android:textColor="@android:color/darker_gray" />

        <ImageView
            android:id="@+id/viewSelectedImage"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:layout_gravity="center_horizontal"
            android:outlineAmbientShadowColor="@color/colorPrimary"
            android:src="@drawable/image" />

        <Button
            android:id="@+id/selectImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/select_image"
            android:background="@color/colorPrimaryDark" />

        <TextView
            android:id="@+id/placeImage"
            android:layout_width="360dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:hint="@string/placeImage"
            android:inputType="text"
            android:textColor="@android:color/darker_gray" />

        <TextView
            android:id="@+id/placeVideo"
            android:layout_width="362dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:hint="@string/placeVideo"
            android:inputType="text"
            android:textColor="@android:color/darker_gray" />
        <VideoView
            android:id="@+id/videoView"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_gravity="center" />
        <Button
            android:id="@+id/selectVideoBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/select_video"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp">

            <TextView
                android:id="@+id/latitude"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:hint="@string/location_latitude" />

            <TextView
                android:id="@+id/longitude"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="80dp"
                android:hint="@string/location_longitude" />
        </LinearLayout>

        <fragment xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:map="http://schemas.android.com/apk/res-auto"
            android:id="@+id/map"
            android:name="com.google.android.gms.maps.MapFragment"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            map:mapType="normal"
            map:uiCompass="true"
            map:uiRotateGestures="true"
            map:uiScrollGestures="true"
            map:uiTiltGestures="true"
            map:uiZoomControls="true"
            map:uiZoomGestures="true" />

        <Button
            android:id="@+id/getLatLng"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            android:text="@string/save_latitude_and_longitude" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">

            <Button
                android:id="@+id/addPlaceBtn"
                android:layout_width="132dp"
                android:layout_height="match_parent"
                android:layout_marginBottom="20dp"
                android:background="@color/colorPrimary"
                android:text="@string/placeBtn" />

            <Button
                android:id="@+id/ViewPlacesBtn"
                android:layout_width="132dp"
                android:layout_height="match_parent"
                android:layout_gravity="right"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="60dp"
                android:background="@color/colorPrimary"
                android:text="@string/viewTouristPlaces" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>
