<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent" android:orientation="vertical">

    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        card_view:cardBackgroundColor="@color/colorPrimaryDark"
        card_view:cardCornerRadius="5dp"
        card_view:cardElevation="5dp"
        card_view:cardUseCompatPadding="false">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="3dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/bookingId"
                android:layout_width="48dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/booking_id"
                android:textColor="@color/colorAccent"
                android:visibility="visible" />

            <TextView
                android:id="@+id/customerId"
                android:layout_width="93dp"
                android:layout_height="match_parent"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/customer_id" />

            <TextView
                android:id="@+id/productId"
                android:layout_width="111dp"
                android:layout_height="47dp"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/product_id"
                android:textColor="@color/colorBackground"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/bookingType"
                android:layout_width="119dp"
                android:layout_height="match_parent"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/type"
                android:textColor="@color/colorBackground"
                android:textSize="15dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:background="@color/colorBackground"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/quantity"
                android:layout_width="87dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:gravity="center_vertical|center_horizontal|center"
                android:text="@string/quantity" />

            <TextView
                android:id="@+id/total"
                android:layout_width="78dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/total_pay" />

            <TextView
                android:id="@+id/payStatus"
                android:layout_width="105dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/pay_status" />

            <TextView
                android:id="@+id/createdAt"
                android:layout_width="127dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/createdAt" />
        </LinearLayout>


    </android.support.v7.widget.CardView>

</LinearLayout>