<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="false"
        tools:context="com.example.zahoor.activities.SingleTourPlaceActivity">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:background="@color/colorBackground"
        android:foregroundGravity="center_horizontal"
        android:orientation="vertical"
        android:outlineAmbientShadowColor="@android:color/black">

        <TextView
            android:id="@+id/singlePlaceName"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textSize="20dp"
            android:gravity="center_vertical|center"
            android:text="@string/placeName" />

        <ImageView
            android:id="@+id/singlePlaceImage"
            android:layout_width="match_parent"
            android:layout_height="208dp"
            android:layout_gravity="center"
            android:padding="2dp"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/hazara"
            tools:layout_editor_absoluteX="14dp"
            tools:layout_editor_absoluteY="58dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:src="@drawable/marker" />

            <TextView
                android:id="@+id/singlePlaceAdd"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:background="@color/colorBackground"
                android:gravity="center_vertical|center"
                android:text="@string/place_address" />
        </LinearLayout>

        <VideoView
            android:id="@+id/singlePlaceVideo"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_gravity="fill_horizontal|center"
            android:layout_margin="5dp"
            android:foregroundGravity="fill" />

        <TextView
            android:id="@+id/singlePlaceDesc"
            android:layout_width="371dp"
            android:layout_height="85dp"
            android:layout_gravity="center_horizontal"
            android:background="@color/colorBackground"
            android:gravity="center_vertical|center"
            android:text="@string/place_description"
            tools:layout_editor_absoluteX="13dp"
            tools:layout_editor_absoluteY="266dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/colorText"
            android:layout_marginBottom="10dp">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp"
                android:layout_weight="1"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:src="@drawable/price" />
            <TextView
                android:id="@+id/singlePlacePrice"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:textSize="20dp"
                android:textColor="@color/colorPrimaryDark"
                android:layout_height="match_parent"
                android:gravity="center_vertical|center"
                android:text="@string/place_price" />
        </LinearLayout>
    </LinearLayout>

    </ScrollView>
