<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimaryDark"
        android:id="@+id/hotelRegisterTemplate"
        tools:context="com.example.zahoor.activities.RegisterHotelActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" android:orientation="vertical">

        <EditText
            android:id="@+id/hotelName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center_vertical|center_horizontal|center"
            android:hint="@string/hotel_name"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/hotelAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center_vertical|center_horizontal|center"
            android:hint="@string/hotel_address"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/hotelPhone"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:layout_gravity="center"
            android:gravity="center_vertical|center_horizontal|center"
            android:hint="Phone No"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/hotelDesc"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:layout_gravity="center"
            android:gravity="center_vertical|center_horizontal|center"
            android:hint="Description"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/hotelService"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:layout_gravity="center"
            android:gravity="center_vertical|center_horizontal|center"
            android:hint="Service"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/hotelPrice"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:layout_gravity="center"
            android:gravity="center_vertical|center_horizontal|center"
            android:hint="@string/price_per_night"
            android:inputType="textPersonName" />

        <ImageView
            android:id="@+id/viewHotelImage"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:scaleType="fitXY"
            android:src="@drawable/bus" />

        <Button
            android:id="@+id/hotelImage"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:layout_margin="5dp"
            android:elevation="6dp"
            android:background="@color/colorPrimary"
            android:gravity="center_vertical|center_horizontal|center"
            android:hint="Select Hotel Image" />

        <TextView
            android:id="@+id/selectedImage"
            android:layout_width="match_parent"
            android:layout_height="31dp"
            android:gravity="center_vertical|center_horizontal|center"
            android:text="Hotel Image Name" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:orientation="vertical">
            <fragment xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:map="http://schemas.android.com/apk/res-auto"
                android:id="@+id/map"
                android:name="com.google.android.gms.maps.MapFragment"
                android:layout_width="match_parent"
                android:layout_height="400dp"
                map:mapType="normal"
                map:uiCompass="true"
                map:uiRotateGestures="true"
                map:uiScrollGestures="true"
                map:uiTiltGestures="true"
                map:uiZoomControls="true"
                map:uiZoomGestures="true" />
            <Button
                android:id="@+id/getLatLng"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimaryDark"
                android:text="@string/save_latitude_and_longitude" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" android:layout_marginBottom="5dp" android:layout_marginTop="5dp">
            <TextView
                android:id="@+id/latitude"
                android:text="@string/latitude"
                android:layout_marginLeft="20dp"
                android:gravity="center_vertical|center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/longitude"
                android:text="@string/longitude"
                android:layout_marginLeft="80dp"
                android:gravity="center_horizontal|center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" android:padding="5dp">

            <Button
                android:id="@+id/addHotelBtn"
                android:layout_width="133dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:elevation="6dp"
                android:background="@color/colorPrimary"
                android:gravity="center_vertical|center_horizontal|center"
                android:padding="2dp"
                android:text="Add Hotel" />

            <Button
                android:id="@+id/viewHotelBtn"
                android:layout_width="126dp"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginLeft="75dp"
                android:background="@color/colorPrimary"
                android:elevation="6dp"
                android:gravity="center_vertical|center_horizontal|center"
                android:padding="2dp"
                android:text="View Hotel" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>
